# bazel_linux_packages

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.devcontainer/: Dockerfile
.github/: CODEOWNERS  bazel-steward.yaml
.github/workflows/: bazel-steward.yaml  ci.yaml  publish.yaml  release.sh  release.yml  release_prep.sh  tag.yaml
apt/: BUILD.bazel  extensions.bzl  install.BUILD.bazel.tmpl
apt/private/: BUILD.bazel  apt_dep_resolver.bzl  apt_extension.bzl  copy.sh.tmpl  create_sysroot.bzl  deb_create_sysroot.bzl  deb_download.bzl  deb_install.bzl  deb_repository.bzl  deb_resolve.bzl  deb_resolver.bzl  integrities.bzl  lockfile.bzl  util.bzl  version.bzl
apt/tests/: resolution_test.bzl
docs/: BUILD.bazel  extensions.md
e2e/: README.md
e2e/clang_toolchain/: BUILD  MODULE.bazel  README.md  focal.lock.json
e2e/clang_toolchain/toolchain/: BUILD.bazel
e2e/clang_toolchain/toolchain/tools/: BUILD.bazel
e2e/gcc_toolchain/: MODULE.bazel  README.md  bookworm.lock.json
e2e/gcc_toolchain/toolchain/: BUILD.bazel
e2e/gcc_toolchain/toolchain/tools/: wrapper.sh
e2e/llvm_toolchain/: .bazelrc  MODULE.bazel  README.md  focal.lock.json
e2e/smoke/: BUILD  MODULE.bazel  README.md  expected_manifest.json  expected_manifest_amd64.json  expected_manifest_arm64.json  expected_output.txt  focal.lock.json  focal_amd64.lock.json  focal_arm64.lock.json  mixed.lock.json
e2e/systemd/: BUILD  MODULE.bazel  README.md  bookworm.lock.json  custom.BUILD.bazel.tmpl  expected_manifest.json
e2e/toolchains/: .bazelrc  BUILD  MODULE.bazel  README.md  bookworm.lock.json  focal.lock.json
e2e/toolchains/clang/: BUILD.bazel
e2e/toolchains/clang/tools/: BUILD.bazel
e2e/toolchains/constraints/: BUILD.bazel
e2e/toolchains/gcc/: BUILD.bazel
e2e/toolchains/gcc/tools/: BUILD.bazel  wrapper.sh
examples/clang_toolchain/: focal.lock.json  focal.yaml
internal/: BUILD.bazel  deb.bzl
