load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@jq.bzl", "jq")

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

jq(
    name = "index_integrities",
    srcs = [
        "@debian_integrities//:integrity.json",
        "@ubuntu_integrities//:integrity.json",
    ],
    out = "index_integrities.json",
    args = [
        "--slurp",
        "--raw-output",
    ],
    filter = '"\\"\\"\\"Generated index integrities.\\"\\"\\"\\nINTEGRITIES = \\(.[0] * .[1])"',
)

write_source_files(
    name = "update_index_integrities",
    diff_test = False,
    files = {"apt/private/integrities.bzl": ":index_integrities"},
)
