"Bazel dependencies"

module(
    name = "rules_linux_toolchains",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.11.0")

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
use_repo(bazel_lib_toolchains, "zstd_linux_amd64")
use_repo(bazel_lib_toolchains, "zstd_linux_arm64")
use_repo(bazel_lib_toolchains, "bsd_tar_linux_amd64")
use_repo(bazel_lib_toolchains, "bsd_tar_linux_arm64")

# Dev dependencies
bazel_dep(name = "gazelle", version = "0.41.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)

apt = use_extension(
    "@rules_linux_toolchains//apt:extensions.bzl",
    "apt",
    dev_dependency = True,
)
apt.source(
    architectures = ["amd64"],
    components = [
        "main",
        "universe",
    ],
    suites = ["focal"],
    uri = "https://snapshot.ubuntu.com/ubuntu/20250219T120000Z",
)
apt.download(
    lockfile = "//examples/clang_toolchain:focal.lock.json",
    packages = [
        "clang-10",
        "gcc-10",
    ],
)
apt.install(
    name = "clang_toolchain",
)
use_repo(
    apt,
    "clang_toolchain",
)
