load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "extensions.bzl",
])

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//apt/private:deb_download",
        "//apt/private:deb_install",
        "//apt/private:deb_repository",
        "//apt/private:integrities",
    ],
)
