# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "extensions",
    bzl_library_target = "//apt:extensions",
    tags = ["manual"],  #  broken with bazel 7.6.1, works with 8+
)

update_docs(
    name = "update",
    tags = ["manual"],
)
