load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "copy.sh.tmpl",
])

bzl_library(
    name = "deb_create_sysroot",
    srcs = ["deb_create_sysroot.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":lockfile",
        "@bazel_skylib//lib:paths",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "lockfile",
    srcs = ["lockfile.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":util"],
)

bzl_library(
    name = "apt_deb_repository",
    srcs = ["apt_deb_repository.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":util",
        ":version_constraint",
    ],
)

bzl_library(
    name = "apt_dep_resolver",
    srcs = ["apt_dep_resolver.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":version",
        ":version_constraint",
    ],
)

bzl_library(
    name = "deb_resolve",
    srcs = ["deb_resolve.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":apt_deb_repository",
        ":apt_dep_resolver",
        ":lockfile",
        "@aspect_bazel_lib//lib:repo_utils",
    ],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["@aspect_bazel_lib//lib:strings"],
)

bzl_library(
    name = "version_constraint",
    srcs = ["version_constraint.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":version"],
)

bzl_library(
    name = "starlark_codegen_utils",
    srcs = ["starlark_codegen_utils.bzl"],
    visibility = ["//apt:__subpackages__"],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//apt:__subpackages__"],
)
