load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "copy.sh.tmpl",
])

bzl_library(
    name = "deb_download",
    srcs = ["deb_download.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":deb_repository",
        ":deb_resolver",
        ":lockfile",
        ":util",
        ":version_constraint",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "deb_install",
    srcs = ["deb_install.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":util"],
)

bzl_library(
    name = "deb_repository",
    srcs = ["deb_repository.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":util",
        ":version_constraint",
    ],
)

bzl_library(
    name = "deb_resolver",
    srcs = ["deb_resolver.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [
        ":version",
        ":version_constraint",
    ],
)

bzl_library(
    name = "lockfile",
    srcs = ["lockfile.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":util"],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["@aspect_bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = ["@aspect_bazel_lib//lib:strings"],
)

bzl_library(
    name = "version_constraint",
    srcs = ["version_constraint.bzl"],
    visibility = ["//apt:__subpackages__"],
    deps = [":version"],
)
