bazel_dep(name = "linux_packages", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.0")
bazel_dep(name = "platforms", version = "0.0.11")

local_path_override(
    module_name = "linux_packages",
    path = "../..",
)

apt = use_extension(
    "@linux_packages//apt:extensions.bzl",
    "apt",
    dev_dependency = True,
)
apt.source(
    architectures = ["amd64"],
    components = [
        "main",
        "universe",
    ],
    suites = ["focal"],
    uri = "https://snapshot.ubuntu.com/ubuntu/20250219T154000Z",
)
apt.download(
    lockfile = "//:focal.lock.json",
    packages = ["clang-10"],
)
apt.install(
    name = "clang_toolchain",
    fix_with_patchelf = True,
)
use_repo(apt, "clang_toolchain")

register_toolchains("//toolchain:clang")
