bazel_dep(name = "bazel_linux_packages", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "toolchains_llvm", version = "1.3.0")
bazel_dep(name = "rules_cc", version = "0.1.1")

local_path_override(
    module_name = "bazel_linux_packages",
    path = "../..",
)

apt = use_extension(
    "@bazel_linux_packages//apt:extensions.bzl",
    "apt",
    dev_dependency = True,
)
apt.source(
    architectures = ["amd64"],
    components = [
        "main",
        "universe",
    ],
    suites = ["focal"],
    uri = "https://snapshot.ubuntu.com/ubuntu/20250219T154000Z",
)
apt.download(
    lockfile = "//:focal.lock.json",
    packages = ["g++-10"],
)
apt.install(name = "gcc_sysroot")
use_repo(apt, "gcc_sysroot")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.0",
    stdlib = {"linux-x86_64": "stdc++"},
)
llvm.sysroot(
    label = "@gcc_sysroot//:files",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:cc-toolchain-x86_64-linux")
