bazel_dep(name = "bazel_linux_packages", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
bazel_dep(name = "rules_cc", version = "0.1.3")

local_path_override(
    module_name = "bazel_linux_packages",
    path = "../..",
)

apt = use_extension(
    "@bazel_linux_packages//apt:extensions.bzl",
    "apt",
    dev_dependency = True,
)
apt.ubuntu(
    name = "gcc_sysroot",
    components = [
        "main",
        "universe",
    ],
    lockfile = "//:focal.lock.json",
    packages = [
        "binutils",
        "libstdc++-10-dev",
    ],
    suites = ["focal"],
)
use_repo(apt, "gcc_sysroot")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.0",
    stdlib = {"linux-x86_64": "stdc++"},
)
llvm.sysroot(
    label = "@gcc_sysroot//:files",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:cc-toolchain-x86_64-linux")
