bazel_dep(name = "linux_packages", version = "0.0.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

local_path_override(
    module_name = "linux_packages",
    path = "../..",
)

apt = use_extension(
    "@linux_packages//apt:extensions.bzl",
    "apt",
    dev_dependency = True,
)
apt.source(
    architectures = [
        "amd64",
        "arm64",
    ],
    components = ["main"],
    suites = ["focal"],
    uri = "https://snapshot.ubuntu.com/ubuntu/20250219T154000Z",
)
apt.download(
    name = "download_busybox_amd64",
    architectures = ["amd64"],
    lockfile = "//:focal_amd64.lock.json",
    packages = ["busybox"],
)
apt.install(
    name = "busybox_amd64",
    source = "download_busybox_amd64",
)
apt.download(
    name = "download_busybox_arm64",
    architectures = ["arm64"],
    lockfile = "//:focal_arm64.lock.json",
    packages = ["busybox"],
)
apt.install(
    name = "busybox_arm64",
    source = "download_busybox_arm64",
)
use_repo(apt, "busybox_amd64", "busybox_arm64")
