bazel_dep(name = "bazel_linux_packages", version = "0.0.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

local_path_override(
    module_name = "bazel_linux_packages",
    path = "../..",
)

apt = use_extension(
    "@bazel_linux_packages//apt:extensions.bzl",
    "apt",
    dev_dependency = True,
)
apt.ubuntu(
    name = "busybox",
    architectures = [
        "amd64",
        "arm64",
    ],
    lockfile = "//:focal.lock.json",
    packages = ["busybox"],
    suites = ["focal"],
)
use_repo(apt, "busybox_amd64", "busybox_arm64")
