bazel_dep(name = "bazel_linux_packages", version = "0.0.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

local_path_override(
    module_name = "bazel_linux_packages",
    path = "../..",
)

apt = use_extension(
    "@bazel_linux_packages//apt:extensions.bzl",
    "apt",
    dev_dependency = True,
)
apt.ubuntu(
    name = "busybox",
    architectures = [
        "amd64",
        "arm64",
    ],
    lockfile = "//:focal.lock.json",
    packages = ["busybox"],
    suites = ["focal"],
)
use_repo(apt, "busybox_amd64", "busybox_arm64")

apt.source(
    name = "ubuntu_focal",
    architectures = [
        "amd64",
        "arm64",
    ],
    suites = ["focal"],
    uri = "https://snapshot.ubuntu.com/ubuntu/20250219T154000Z",
)
apt.source(
    name = "debian_bookworm",
    architectures = [
        "amd64",
        "arm64",
    ],
    suites = ["bookworm"],
    uri = "https://snapshot.debian.org/archive/debian/20250201T023325Z",
)
apt.download(
    name = "busybox_mixed",
    architectures = [
        "amd64",
        "arm64",
    ],
    lockfile = "//:mixed.lock.json",
    packages = ["busybox"],
    sources = [
        "ubuntu_focal",
        "debian_bookworm",
    ],
)
use_repo(apt, "busybox_mixed_amd64", "busybox_mixed_arm64")
