bazel_dep(name = "bazel_linux_packages", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_platform", version = "0.1.0")

local_path_override(
    module_name = "bazel_linux_packages",
    path = "../..",
)

apt = use_extension(
    "@bazel_linux_packages//apt:extensions.bzl",
    "apt",
    dev_dependency = True,
)
apt.ubuntu(
    name = "clang",
    components = [
        "main",
        "universe",
    ],
    fix_relative_interpreter_with_patchelf = True,
    fix_rpath_with_patchelf = True,
    lockfile = "//:focal.lock.json",
    packages = ["clang-10"],
    suites = ["focal"],
)
use_repo(apt, "clang")

register_toolchains("//clang")

apt.debian(
    name = "gcc",
    add_files = {
        "usr/bin/{arch}-linux-gnu-g++-12.wrapped": "//gcc/tools:wrapper.sh",
        "usr/bin/{arch}-linux-gnu-gcc-12.wrapped": "//gcc/tools:wrapper.sh",
    },
    extra_patchelf_dirs = ["usr/lib/gcc/{arch}-linux-gnu/12"],
    fix_relative_interpreter_with_patchelf = True,
    fix_rpath_with_patchelf = True,
    lockfile = ":bookworm.lock.json",
    packages = ["g++-12"],
    suites = ["bookworm"],
)
use_repo(apt, "gcc")

register_toolchains("//gcc")
