load("@rules_cc//cc/toolchains:tool.bzl", "cc_tool")
load("@rules_cc//cc/toolchains:tool_map.bzl", "cc_tool_map")

cc_tool(
    name = "ar",
    src = "@clang//:usr/bin/x86_64-linux-gnu-ar",
    data = ["@clang//:files"],
)

cc_tool(
    name = "asm",
    src = "@clang//:usr/bin/x86_64-linux-gnu-as",
    data = ["@clang//:files"],
)

cc_tool(
    name = "clang++",
    src = "@clang//:usr/bin/clang++-10",
    data = ["@clang//:files"],
)

cc_tool(
    name = "clang",
    src = "@clang//:usr/bin/clang-10",
    data = ["@clang//:files"],
)

cc_tool(
    name = "ld",
    src = "@clang//:usr/bin/clang++-10",
    data = ["@clang//:files"],
)

cc_tool(
    name = "objcopy",
    src = "@clang//:usr/bin/x86_64-linux-gnu-objcopy",
    data = ["@clang//:files"],
)

cc_tool(
    name = "strip",
    src = "@clang//:usr/bin/x86_64-linux-gnu-strip",
    data = ["@clang//:files"],
)

cc_tool_map(
    name = "tool_map",
    tools = {
        "@rules_cc//cc/toolchains/actions:ar_actions": ":ar",
        "@rules_cc//cc/toolchains/actions:assembly_actions": ":asm",
        "@rules_cc//cc/toolchains/actions:c_compile": ":clang",
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions": ":clang++",
        "@rules_cc//cc/toolchains/actions:link_actions": ":ld",
        "@rules_cc//cc/toolchains/actions:objcopy_embed_data": ":objcopy",
        "@rules_cc//cc/toolchains/actions:strip": ":strip",
    },
    visibility = ["//visibility:public"],
)
